# rcmd

./: .gitignore  .gitmodules  Cargo.toml  build.sh  cmd  cpso.sh
RemoteCamAd/: settings.gradle
RemoteCamAd/app/: build.gradle
RemoteCamAd/app/src/androidTest/java/com/wws/remotecamad/: ExampleInstrumentedTest.java
RemoteCamAd/app/src/main/: AndroidManifest.xml
RemoteCamAd/app/src/main/java/com/wws/remotecamad/: HelloWorld.java  MainActivity.java  OnGetError.java  RemoteCamAgent.java
RemoteCamAd/app/src/main/res/layout/: activity_main.xml
RemoteCamAd/app/src/main/res/values/: strings.xml  themes.xml
RemoteCamAd/app/src/main/res/values-night/: themes.xml
RemoteCamAd/app/src/test/java/com/wws/remotecamad/: ExampleUnitTest.java
RemoteCamAd/gradle/wrapper/: gradle-wrapper.properties
rcmd-suit/: .gitignore  Cargo.toml
rcmd-suit/misc_gen/: Cargo.toml
rcmd-suit/misc_gen/src/: lib.rs
rcmd-suit/pm_gen/: Cargo.toml
rcmd-suit/pm_gen/src/: lib.rs
rcmd-suit/src/: ab_client.rs  asy_cry.rs  client_handler.rs  config_build.rs  ext_code.rs  handler.rs  lib.rs  plug.rs  subpackage.rs  tools.rs
rcmd-suit/src/client_plug/: client_plug.rs  mod.rs
rcmd-suit/src/clients/: mod.rs  tcp_client.rs  udp_client.rs
rcmd-suit/src/data_transform/: def_compress.rs  mod.rs
rcmd-suit/src/db/: db_mgr.rs
rcmd-suit/src/plugs/: heart_beat.rs  mod.rs
rcmd-suit/src/servers/: attached_udp_server.rs  mod.rs  tcp_server.rs  udp_server.rs
rcmd-suit/src/utils/: cycle_count.rs  data_current_limiter.rs  mod.rs  msg_restorer.rs  msg_split.rs  rcmd.rs  stream_parser.rs  temp_permission.rs  udp_sender.rs
remote_cam/: Cargo.toml
remote_cam/src/: lib.rs  test.rs
remote_cam/src/client/: comm.rs  extc.rs  mod.rs  scl.rs
remote_cam/src/client/handlers/: agent_execuor.rs  err.rs  mod.rs
remote_cam/src/client_plugs/: attched_udp_sender.rs  mod.rs  p2p_dead_plug.rs  p2p_event.rs  p2p_plugs.rs  udp_server_channel.rs
remote_cam/src/context/: mod.rs
remote_cam/src/model/: mod.rs  user.rs
src/: Agreement.rs  ab_client.rs  agreement.rs  asy_cry.rs  client.rs  comm.rs  config_build.rs  ext_code.rs  extc.rs  handler.rs  learn_async.rs  main.rs  plug.rs  scl.rs  subpackage.rs  test_udp.rs  tools.rs  udp_client.rs
src/client_handlers/: agent_cmd_res.rs  err.rs  exec_cmd.rs  get_users.rs  mod.rs  pull_file.rs  pull_file_ret.rs  run_cmd.rs  save_file.rs  send_file.rs
src/client_plugs/: attched_udp_sender.rs  mod.rs  p2p_dead_plug.rs  p2p_event.rs  p2p_plugs.rs  udp_server_channel.rs
src/clients/: tcp_client.rs  udp_client.rs
src/command/: agent_cmd.rs  main_cmd.rs  mod.rs  p2p_cmd.rs  remote_cmd.rs
src/data_transform/: def_compress.rs
src/db/: db_mgr.rs  from_row.rs  mod.rs
src/handlers/: agent_cmd_forward.rs  exec_cmd.rs  get_users.rs  heart_beat.rs  login.rs  mod.rs  pull_file.rs  register.rs  send_file.rs  send_msg.rs  upload_file.rs
src/model/: mod.rs  user.rs
src/p2p_client_handler/: mod.rs  upload_file.rs
src/p2p_handler/: mod.rs  p2p_handler.rs  p2p_plugs.rs
src/plugs/: heart_beat.rs
src/servers/: mod.rs  tcp_server.rs  udp_server.rs
src/test/: args.rs  cmd.rs  gen_cnf.rs  json.rs  test_mysql.rs  test_rsa.rs  test_terminal.rs
src/utils/: command_mgr.rs  mod.rs  msg_split.rs  rcmd.rs  udp_sender.rs
