[package]
name = "rcmd"
version = "0.1.0"
authors = ["wws <1274704958@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mysql","mysql2"]
mysql2 = ["rcmd-suit/mysql"]

[dependencies]
tokio = { version="0.3.5", features = ["full"]}
async-trait = "0.1.42"
getopts = "0.2.21"
regex = "1.4.2"
terminal = { version = "0.2" , features = ["crossterm-backend"] }
serde = { version = "1.0.61",features=["serde_derive"]}
serde_json = "1.0.61"
lazy_static = "1.4.0"
ahash = "0.6.3"
futures = "*"
flate2 = "*"

[dependencies.rcmd-suit]
path = "rcmd-suit"
default-features = false

[dependencies.mysql]
version = "=20.1.0"
optional = true

[[example]]
name = "client"
path = "src/client.rs"
required-features = []

[[example]]
name = "learn_async"
path = "src/learn_async.rs"


[[example]]
name = "test_rsa"
path = "src/test/test_rsa.rs"

[[example]]
name = "test_terminal"
path = "src/test/test_terminal.rs"

[[example]]
name = "test_mysql"
path = "src/test/test_mysql.rs"

[[example]]
name = "json"
path = "src/test/json.rs"

[[example]]
name = "r"
path = "src/test/cmd.rs"

[[example]]
name = "args"
path = "src/test/args.rs"

[[example]]
name = "scl"
path = "src/scl.rs"

[[example]]
name = "gen_cnf"
path = "src/test/gen_cnf.rs"

[[example]]
name = "test_udp"
path = "src/test_udp.rs"

[[example]]
name = "udp_c"
path = "src/udp_client.rs"