[package]
name = "rcmd"
version = "0.1.0"
authors = ["wws <1274704958@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mysql"]

[dependencies]
tokio = { version="1.23.0", features = ["full"]}
async-std = "1.12.0"
rsa = "0.7.2"
async-trait = "0.1.59"
getopts = "0.2.21"
regex = "1.4.2"
terminal = { version = "0.2" , features = ["crossterm-backend"] }
serde = { version = "1.0.150",features=["serde_derive"]}
serde_json = "1.0.89"
lazy_static = "1.4.0"
ahash = "0.6.3"
futures = "0.3.25"
flate2 = "*"
get_if_addrs = "0.5.3"
args = "2.2.0"
encoding_rs = "0.8.26"
subprocess = "0.2.6"
rand = { version = "0.8.5", default-features = false }
num_enum = "0.5.7"
num-traits = "0.2.15"

[dependencies.rcmd-suit]
path = "rcmd-suit"
default-features = false

[dependencies.mysql]
version = "=20.1.0"
optional = true

[[example]]
name = "client"
path = "src/client.rs"
required-features = []

[[example]]
name = "learn_async"
path = "src/learn_async.rs"


[[example]]
name = "test_rsa"
path = "src/test/test_rsa.rs"

[[example]]
name = "test_terminal"
path = "src/test/test_terminal.rs"

[[example]]
name = "test_mysql"
path = "src/test/test_mysql.rs"

[[example]]
name = "json"
path = "src/test/json.rs"

[[example]]
name = "r"
path = "src/test/cmd.rs"

[[example]]
name = "args"
path = "src/test/args.rs"

[[example]]
name = "scl"
path = "src/scl.rs"

[[example]]
name = "gen_cnf"
path = "src/test/gen_cnf.rs"

[[example]]
name = "test_udp"
path = "src/test_udp.rs"

[[example]]
name = "udp_c"
path = "src/udp_client.rs"