[package]
name = "remote_cam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
jni = { version="*", default-features = false}
async-trait = "0.1.42"
static_init = "1.0.3"
serde = { version = "1.0.61",features=["serde_derive"]}
serde_json = "1.0.61"
tokio = { version= "1.19.2", features = ["full"]}

[dependencies.rcmd-suit]
path = "../rcmd-suit"
default-features = false