[package]
name = "remote_cam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
jni = { version="*", default-features = false}
async-trait = "0.1.42"
static_init = "1.0.3"
serde = { version = "1.0.61",features=["serde_derive"]}
serde_json = "1.0.61"
tokio = { version="0.3.5", features = ["full"]}
num-traits = "0.2.14"
async-std = "1.8.0"
num_enum = "0.5"
ahash = "0.6.3"
get_if_addrs = "0.5.3"

[dependencies.rcmd-suit]
path = "../rcmd-suit"
default-features = false

[[example]]
name = "test"
path="src/test.rs"