[package]
name = "remote_cam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
jni = { version="*", default-features = false}
async-trait = "0.1.59"
static_init = "1.0.3"
serde = { version = "1.0.150",features=["serde_derive"]}
serde_json = "1.0.89"
tokio = { version="1.23.0", features = ["full"]}
num-traits = "0.2.15"
async-std = "1.12.0"
num_enum = "0.5.7"
ahash = "0.6.3"
local-ip-address = "0.4.9"

[dependencies.rcmd-suit]
path = "../rcmd-suit"
default-features = false

[[example]]
name = "test"
path="src/test.rs"